--- a/Proverbs/proverbsStyle.css
+++ b/Proverbs/proverbsStyle.css
@@ -50,12 +50,13 @@ nav{
     font-size: 25px;
     margin-bottom: 0px;
     color: rgb(64, 64, 156) ;
+    padding-left: 20px;
 }
 
 .c-container{
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 3px;
     max-width: 1000px;
@@ -101,6 +102,24 @@ nav{
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.search-holder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+input {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px;
+    border-radius: 5px;
+    width: 1000px;
+    margin-top: 20px;
+    border: 2px solid rgb(64, 64, 156);
+    color: rgb(64, 64, 156);
+}
+
 
 @media (max-width: 800px) {
     .c-container, .verses {
