--- a/Proverbs/proverbsStyle.css
+++ b/Proverbs/proverbsStyle.css
@@ -84,6 +84,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     flex-wrap: wrap;
     border-radius: 7px;
     padding: 20px; 
